src/objects/Candidate__c.object
<CustomObject>
    <fields>
        <fullName>Address_Error__c</fullName>
        <inlineHelpText>If a US address is invalid, the problem is recorded in this field.</inlineHelpText>
        <label>Address Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AsyncValidationFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>this field should only be set by the CandidateAddressValidation trigger and Async callout method it uses.  when this field is true that means the record is being updated by the Async method.  when it is false it means a user updated the record.</inlineHelpText>
        <label>AsyncValidationFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Batch_Load_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Batch Load Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Congress_District__c</fullName>
        <inlineHelpText>Identifies an area within the US served by a member of the House or Senate. If an Army/Air Force or fleet post office is used for this address, this field will be blank. If only one member of Congress within a state, the code will be AL (at large).</inlineHelpText>
        <label>Congress District</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <inlineHelpText>US County</inlineHelpText>
        <label>County</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Employer__c</fullName>
        <label>Current Employer</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currently_Employed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Currently Employed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Drivers_License_Number__c</fullName>
        <label>Drivers License Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <picklist>
            <picklistValues>
                <fullName>GED/HS Diploma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA/BS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA/MS/MBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PhD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Doc</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legacy_Candidate_Number__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Candidate Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <inlineHelpText>Between 180 and -180</inlineHelpText>
        <label>Longitude</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Picture_ID__c</fullName>
        <label>Picture ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picture_Link__c</fullName>
        <formula>IF( LEN( Picture_ID__c ) &lt;&gt; 0, HYPERLINK(&quot;/servlet/servlet.FileDownload?file=&quot; &amp; Picture_ID__c , &quot;Candidate Picture&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Picture Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picture_URL__c</fullName>
        <formula>IF( LEN(Picture_ID__c ) &lt;&gt; 0, &quot;/servlet/servlet.FileDownload?file=&quot; &amp; Picture_ID__c , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Picture URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Social_Security_Number__c</fullName>
        <label>Social Security Number</label>
        <length>12</length>
        <maskChar>X</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State/Province</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address_1__c</fullName>
        <label>Street Address 1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address_2__c</fullName>
        <label>Street Address 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tags__c</fullName>
        <label>Tags</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>US_Citizen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>US Citizen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unique_key__c</fullName>
        <formula>LOWER(Last_Name__c &amp; Email__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid_US_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field is set automatically by a trigger for US addresses.  If the address is valid then the ZipCode is updated automatically to the Zip+4 format and the geocode information is stored.</inlineHelpText>
        <label>Valid US Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Visa_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visa Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Years_of_Experience__c</fullName>
        <label>Years of Experience</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Candidate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Phone__c</columns>
        <columns>Email__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>RecruiterQueue</fullName>
        <filterScope>Queue</filterScope>
        <label>Recruiter Queue</label>
        <queue>RecruiterQueue</queue>
    </listViews>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Candidate Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidates</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Valid_SSN_Format</fullName>
        <active>true</active>
        <description>Validates that a custom text field called SSN is formatted in 999-99-9999 number format (if it is not blank).</description>
        <errorConditionFormula>NOT(OR(LEN ( Social_Security_Number__c ) = 0,REGEX(  Social_Security_Number__c  , &quot;[0-9]{3}-[0-9]{2}-[0-9]{4}&quot;)))</errorConditionFormula>
        <errorDisplayField>Social_Security_Number__c</errorDisplayField>
        <errorMessage>SSN must be in this format: 999-99-9999.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Zip_code_must_be_Valid_US_Postal_Code</fullName>
        <active>true</active>
        <description>Validates that the candidate Zip/Postal Code is in 99999 or 99999-9999 format if Country is USA or US.</description>
        <errorConditionFormula>AND(OR( Country__c  = &quot;USA&quot;,  Country__c  = &quot;US&quot;), NOT(REGEX(  Zip_Postal_Code__c  , &quot;\\d{5}(-\\d{4})?&quot;)))</errorConditionFormula>
        <errorDisplayField>Zip_Postal_Code__c</errorDisplayField>
        <errorMessage>Zip code must be in 99999 or 99999-9999 format.</errorMessage>
    </validationRules>
</CustomObject>